[gd_scene load_steps=3 format=3 uid="uid://bydvphe7lf1gd"]

[ext_resource type="Theme" path="res://resources/themes/default_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://scripts/ui/quest_card.gd" id="2_script"]

[node name="QuestCard" type="Control"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
layout_mode = 2

[node name="QuestTitle" type="Label" parent="Background/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quest Title"
horizontal_alignment = 0
autowrap_mode = 2

[node name="StatusLabel" type="Label" parent="Background/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Active"
modulate = Color(0.5, 1, 0.5, 1)

[node name="HSeparator" type="HSeparator" parent="Background/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="Background/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
text = "Quest description goes here..."
autowrap_mode = 3
vertical_alignment = 0

[node name="ObjectivesContainer" type="VBoxContainer" parent="Background/VBoxContainer"]
layout_mode = 2

[node name="ObjectivesHeader" type="Label" parent="Background/VBoxContainer/ObjectivesContainer"]
layout_mode = 2
text = "Objectives:"

[node name="ObjectivesList" type="VBoxContainer" parent="Background/VBoxContainer/ObjectivesContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Background/VBoxContainer"]
layout_mode = 2
max = 100.0
value = 50.0
show_percentage = false

[node name="ProgressLabel" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
text = "Progress: 1/2 objectives completed"
horizontal_alignment = 1

[node name="RewardContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="RewardLabel" type="Label" parent="Background/VBoxContainer/RewardContainer"]
layout_mode = 2
text = "Rewards:"

[node name="GoldReward" type="Label" parent="Background/VBoxContainer/RewardContainer"]
layout_mode = 2
text = "100g"
modulate = Color(1, 1, 0.5, 1)

[node name="XPReward" type="Label" parent="Background/VBoxContainer/RewardContainer"]
layout_mode = 2
text = "50 XP"
modulate = Color(0.5, 0.5, 1, 1)

[node name="HSeparator2" type="HSeparator" parent="Background/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TrackButton" type="Button" parent="Background/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Track Quest"

[node name="TurnInButton" type="Button" parent="Background/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Turn In"